--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="keyword" content="bitcoin, cryptocurrency, chart, react">
+    <meta name="description" content="chart example using bithumb open api">
+    <meta name="author" content="dragonsuperf@gmail.com, Yong Su Kim">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React!</title>
   </head>
   <body>
